# mmjp

./: .gitattributes  .gitignore  LICENSE  README.md  mmjp_lossless.c  mmjp_lossless.h  pyproject.toml  run_tests.sh  setup.py
datasets/: wiki_small.txt
double_array/: double_array_trie.c  double_array_trie.h
mmjp/: __init__.py  _mmjp.c
npycrf_lite/: npycrf_lite.c  npycrf_lite.h
optimise/: mmjp_lambda_len_grid.tsv  mmjp_pareto_collapsed.csv  mmjp_pareto_report.md
optimise/lambda0.2以下/: mmjp_lambda0_q_pareto.csv  mmjp_lambda0_q_report.md  mmjp_lambda0_q_sweep.tsv  patch_lambda0_q.py
suffix_array/: sa_utf8.c  sa_utf8.h  sn_suffix_array_utf8.c  sn_suffix_array_utf8.h
tools/: mmjp_export_c.c  mmjp_model.c  mmjp_model.h  mmjp_tokenize.c  mmjp_train.c
unilm_mdl/: unilm_mdl.c  unilm_mdl.h
