[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmjp"
version = "0.1.1"
description = "Tiny Japanese tokenizer / subword segmenter (C99 core + Python bindings)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "MMJP contributors" }
]

[tool.setuptools]
packages = ["mmjp"]
include-package-data = true
